--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -6,6 +6,7 @@ figure_list:
     label: "Figure 0.1"
     caption: "Presenters delivered papers over the course of four days. Seated, from left: Dale Kronkright, Brad Epley, Desirae Dijkema, Mary Piper Hough, Stefan Michalski, Mary Gridley, and Yujin Kim."
     credit: "Image: Mikkel Scharff"
+    alt: "A panel of speakers sits behind a table below the presentation screen, which shows the symposium title."
 
   - id: "fig-0-2"
     src: "figures/fig-0-2.jpg"
@@ -13,6 +14,7 @@ figure_list:
     label: "Figure 0.2"
     caption: "The Yale Art Gallery auditorium was filled with hundreds of attendees from around the world."
     credit: "Image: Mikkel Scharff"
+    alt: "An auditorium filled with attendees watch a presentation."
 
   - id: "fig-0-3"
     src: "figures/fig-0-3.jpg"
@@ -20,6 +22,7 @@ figure_list:
     label: "Figure 0.3"
     caption: "Conference participants took part in “sandbox sessions” led by experts giving practical demonstrations. Here, author Helena Loermans leads a workshop on reconstructing historical fabric weave patterns."
     credit: "Image: Mikkel Scharff"
+    alt: "People stand holding blue ribbons attached to a table. A woman stands near the table to weave the ribbons together."
 
   - id: "fig-1-1"
     src: "figures/fig-1-1.jpg"
@@ -27,6 +30,7 @@ figure_list:
     label: "Figure 1.1"
     caption: "Edward Lear, *View of Reggio and the Straits of Messina*, 1852. Oil on canvas, 51.4 × 81.2 cm (20 1/4 × 32 in.). Typical raised crack pattern, impact cracks, and canvas corner undulation in raking light."
     credit: "Image: Tate"
+    alt: "Black and white photograph of a painting in raking light that highlights the canvas surface and cracks."
 
   - id: "fig-1-2"
     src: "figures/fig-1-2.png"
@@ -34,6 +38,7 @@ figure_list:
     label: "Figure 1.2"
     caption: "Long-term relaxation for several canvases and linings plotted logarithmically against time (Daly Hartin et al. 2011)."
     credit: "Image: Stephen Hackney"
+    alt: "A line graph showing depicting painting canvas relaxation versus time."
 
   - id: "fig-1-3"
     src: "figures/fig-1-3.png"
@@ -41,6 +46,7 @@ figure_list:
     label: "Figure 1.3"
     caption: "Strain variations near the canvas edges associated with the use of tacks for attachment to the stretcher (Young and Hibberd 1999)."
     credit: "Image: Stephen Hackney"
+    alt: "Graph depicting canvas strain variations associated with stretching caused by tack."
 
   - id: "fig-1-4"
     src: "figures/fig-1-4.jpg"
@@ -48,6 +54,7 @@ figure_list:
     label: "Figure 1.4"
     caption: "Julius Caesar Ibbetson, *Smugglers on the Irish Coast*, 1808. Oil paint on canvas, 54.6 × 85.1 cm (21 1/2 × 32 in.). Glue-lined oil painting, possibly including megilp chosen by the artist for its fluidity (Ibbetson 1803). The raking light reveals flattened impasto and weave emphasis from glue lining."
     credit: "Image: Tate"
+    alt: "Black and white image in raking light of an oil painting."
 
   - id: "fig-1-5"
     src: "figures/fig-1-5.jpg"
@@ -55,6 +62,7 @@ figure_list:
     label: "Figure 1.5"
     caption: "A painting made from three stretchers interwoven by strips of canvas, which presents a structural conservation challenge. Stephen Buckley, *Nice*, 1972. Acrylic on canvas, 81 × 90.2 × 5.1 cm (32 × 35 1/2 × 2 in.). Tate, London."
     credit: "Image: © Stephen Buckley / Photo: Tate"
+    alt: "Photograph of a painting of blue interwoven canvas."
 
   - id: "fig-1-6"
     src: "figures/fig-1-6.png"
@@ -62,6 +70,7 @@ figure_list:
     label: "Figure 1.6"
     caption: "Plot of molar mass distribution. A new canvas on the right with a range of very high molecular weights compared with two samples of a J. M. W. Turner loose-lining canvas (painting dated 1846). The peaks (modes) for the Turner canvas are at much less molar mass and there is a greater spread of molar masses than for the new canvas, indicating that the long cellulose molecules have been cleaved at many points. Also, the darker exposed parts are more degraded than the lighter parts behind the stretcher. Canvas samples analyzed at BOKU Vienna during the EU MEMORI project (Jeong et al. 2013)."
     credit: "Image: Myung-Joon Jeong, Manuel Becker, Antje Potthast, Susana López-Aparicio, and Stephen Hackney"
+    alt: "A plot graph depicting molar mass distribution in three different painting canvases."
 
   - id: "fig-1-7-a"
     src: "figures/fig-1-7-a.jpg"
@@ -69,11 +78,13 @@ figure_list:
     label: "a"
     # caption: "Two separate studies showing that below 0.5–1.0 air exchanges per day, the air concentration of internally generated volatile pollution soars. (a) Large-volume display cases (Thickett et al. 2007). (b) Various narrow painting frames and cases (Grøntoft et al. 2011). See Hackney 2016."
     # credit: "Image: Stephen Hackney"
+    alt: "A plot graph depicting display case air exchange per day versus acetic acid concentration."
 
   - id: "fig-1-7-b"
     src: "figures/fig-1-7-b.jpg"
     zoom: true
     label: "b"
+    alt: "A plot grpah epicting painting container air exchange rate per day versus acetic acid concentration."
 
   - id: "fig-2-1"
     src: "figures/fig-2-1.png"
@@ -366,6 +377,7 @@ figure_list:
     label: "Figure 8.1"
     caption: "Anthony van Dyck (Flemish, 1599–1641), *Equestrian Portrait of Charles I*, 1637–38. Oil on canvas, 368 × 292.5 cm (144 7/8 × 155 1/8 in.). Before treatment."
     credit: "Image: National Gallery, London"
+    alt: "Oil painting of an armored man riding a pale horse, both facing left. To the right, a man holds the rider's helmet."
 
   - id: "fig-8-2"
     src: "figures/fig-8-2.jpg"
@@ -373,6 +385,7 @@ figure_list:
     label: "Figure 8.2"
     caption: "Van Dyck’s *Equestrian Portrait of Charles I*. Detail of the canvas reverse showing the black ticking pattern. The wax-resin adhesive is being removed in this photograph."
     credit: "Image: National Gallery, London"
+    alt: "Photograph of two painting conservators leadning over a table and examining the back of a painting."
 
   - id: "fig-8-3"
     src: "figures/fig-8-3.jpg"
@@ -380,6 +393,7 @@ figure_list:
     label: "Figure 8.3"
     caption: "Van Dyck’s *Equestrian Portrait of Charles I*. Detail of the canvas reverse showing the splits at the sides during their repair with inserts of new primed canvas."
     credit: "Image: National Gallery, London"
+    alt: "Photograph close-up of hands atop a table. The right hand holds a pencil and traces the outline of a canvas."
 
   - id: "fig-8-4"
     src: "figures/fig-8-4.jpg"
@@ -387,6 +401,7 @@ figure_list:
     label: "Figure 8.4"
     caption: "Van Dyck’s *Equestrian Portrait of Charles I*. Detail of the reverse of the lining canvas before treatment showing the uneven distribution of the wax-resin adhesive."
     credit: "Image: National Gallery, London"
+    alt: "Photograph close-up of  wax adhesive on a canvas."
 
   - id: "fig-8-5"
     src: "figures/fig-8-5.png"
@@ -394,6 +409,7 @@ figure_list:
     label: "Figure 8.5"
     caption: "Diagram showing the construction of the vacuum envelope used to treat Van Dyck’s *Equestrian Portrait of Charles I*."
     credit: "Image: National Gallery, London"
+    alt: "Diagram showing the the construction of a vauum envelope for canvas treatment."
 
   - id: "fig-8-6"
     src: "figures/fig-8-6.jpg"
@@ -401,6 +417,7 @@ figure_list:
     label: "Figure 8.6"
     caption: "Relining of the Van Dyck painting inside a vacuum envelope using a Willard Multi-purpose Table as the heat source."
     credit: "Image: National Gallery, London"
+    alt: "Photograph of people standing around a large table. An encased painting sits atop the table."
 
   - id: "fig-8-7"
     src: "figures/fig-8-7.jpg"
@@ -408,6 +425,7 @@ figure_list:
     label: "Figure 8.7"
     caption: "Van Dyck’s *Equestrian Portrait of Charles I* after relining and restoration."
     credit: "Image: National Gallery, London"
+    alt: "Oil painting of an armored man riding a pale horse, both facing left. To the right, a man holds the rider's helmet."
 
   - id: "fig-9-2"
     src: "figures/fig-9-2.jpg"
@@ -415,6 +433,7 @@ figure_list:
     label: "Figure 9.2"
     caption: "An open-weave linen canvas sprayed with an acrylic dispersion adhesive. Note the masked-out area, which is the exact dimensions of the painting that will be lined."
     credit: "Image: SRAL"
+    alt: "Photograph of painting canvas linen."
 
   - id: "fig-9-1"
     src: "figures/fig-9-1.jpg"
@@ -422,6 +441,7 @@ figure_list:
     label: "Figure 9.1"
     caption: "Close-up of the open-network sprayed lining adhesive."
     credit: "Image: SRAL"
+    alt: "Photograph close-up of painting canvas linen."
 
   - id: "fig-9-3"
     src: "figures/fig-9-3.png"
@@ -429,6 +449,7 @@ figure_list:
     label: "Figure 9.3"
     caption: "Schematic view of the setup for the low-pressure envelope."
     credit: "Image: Kate Seymour"
+    alt: "Numbered chart depicting the components of a painting low-pressure envelope."
 
   - id: "fig-9-4"
     poster: "figures/fig-9-4.jpg"
@@ -437,6 +458,7 @@ figure_list:
     label: "Figure 9.4"
     caption: "Video still showing the mist-lining process."
     credit: "Video: SRAL"
+    alt: "Video showing conservators working on mist-lining a painting."
 
   - id: "fig-9-5"
     src: "figures/fig-9-5.jpg"
@@ -444,6 +466,7 @@ figure_list:
     label: "Figure 9.5"
     caption: "Mist-Lining Workshop trainees practicing placing the solvent-delivery cloth to reactivate the lining adhesive."
     credit: "Image: Joanna Strombek"
+    alt: "Photograph of conservators who stand around a table, where a painting sits atop its center. They are placing a cloth atop the painting."
 
   - id: "fig-9-6"
     src: "figures/fig-9-6.jpg"
@@ -451,6 +474,7 @@ figure_list:
     label: "Figure 9.6"
     caption: "Deaccessioned painting prior to lining. Note that the out-of-plane deformations are mitigated prior to lining using gentle tension and controlled humidification."
     credit: "Image: SRAL"
+    alt: "Photograph of a portrait painting prior to teratment. It has an aged, wrinkling canvas surface."
 
   - id: "fig-9-7"
     src: "figures/fig-9-7.jpg"
@@ -458,6 +482,7 @@ figure_list:
     label: "Figure 9.7"
     caption: "The deaccessioned painting shown in figure 9.6 after lining. The strip-linings added to apply tension prior to lining were kept in situ. The lined painting is still mounted on the temporary working loom. Note that the raised horizontal deformations are reduced, but the craquelure pattern is still evident."
     credit: "Image: SRAL"
+    alt: "Photograph of a painting after lining treatment. The canvas has a smoother surface."
 
   - id: "fig-10-1"
     src: "figures/fig-10-1.jpg"
@@ -465,6 +490,7 @@ figure_list:
     label: "Figure 10.1"
     caption: "Close-up illustrating an overall loss of adhesion and the need for consolidation."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph close-up of a cracking oil painting."
 
   - id: "fig-10-2"
     src: "figures/fig-10-2.jpg"
@@ -472,6 +498,7 @@ figure_list:
     label: "Figure 10.2"
     caption: "Removal of a 280-year-old lining. Adhesion was adequate after 300 years, but the lining was also easy to remove."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph of a yellowed painting lining."
 
   - id: "fig-10-3"
     src: "figures/fig-10-3.jpg"
@@ -479,6 +506,7 @@ figure_list:
     label: "Figure 10.3"
     caption: "Bloom determination of different animal glues in a gel formulation, 1:3 in water."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph of various animal glues lined atop a table."
 
   - id: "fig-10-4"
     src: "figures/fig-10-4.jpg"
@@ -486,6 +514,7 @@ figure_list:
     label: "Figure 10.4"
     caption: "Experimental samples of different water-based adhesive gels prepared for tests and workshops demonstrating the varied physical properties that can be tailored to the project with simple ingredients. They contain, in different concentrations, materials widely used in conservation that can be dissolved in water, including different flours (low and high W), starches (wheat and rice), CMC (Tylose 300), HPC (Klucel G), thickeners (Klucel G, carob seeds, Carbopol), as well as adhesives (Plextol B 500 acrylic dispersion) and animal gelatins (low/medium/high Bloom)."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph close-up of various painting lining adhesive gels."
 
   - id: "fig-10-5"
     src: "figures/fig-10-5.jpg"
@@ -493,6 +522,7 @@ figure_list:
     label: "Figure 10.5"
     caption: "Lining preparation using a metal provisional expandable lining stretcher."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph of painting lining lain on a wooden floor. A metal lining stretcher is suspended to the wall with rope and hangs above the lining."
 
   - id: "fig-10-6"
     src: "figures/fig-10-6.jpg"
@@ -500,6 +530,7 @@ figure_list:
     label: "Figure 10.6"
     caption: "Application of the selected adhesive mixture on the reverse of the painting."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph of conservators kneeling atop the back of a painting and applying adhesive."
 
   - id: "fig-10-7"
     src: "figures/fig-10-7.jpg"
@@ -507,6 +538,7 @@ figure_list:
     label: "Figure 10.7"
     caption: "Application of adhesive through the selected lining canvas."
     credit: "Image: Matteo Rossi-Doria"
+    alt: "Photograph of a conservator kneeling atop the back of a lining canvas and applying adhesive."
 
   - id: "fig-11-1"
     src: "figures/fig-11-1.jpg"
