--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -570,11 +570,11 @@ entries:
 
   - id: "Flock et al. 2019"
     full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2019. “Störleim-Cellulosefaser-Gemische zur Einzelfadenverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 117–28."
-    sort_as: "Flock 3"
+    sort_as: "Flock 2"
 
   - id: "Flock 2020"
     full: "Flock, Hannah. 2020. “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse.” PhD diss., UdS Saarbrücken. https://doi.org/10.22028/D291-34685."
-    sort_as: "Flock 2"
+    sort_as: "Flock 3"
 
   - id: "Flock et al. 2020"
     full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Wulff Possart. 2020. “Thread-by-Thread Tear Mendings in Conservation of Canvas Paintings: A Problem of Reproducibility in Bonding Qualities.” *Journal of Adhesion*: 1–22. Also published in *Journal of Adhesion* 97, no. 14: 1336–57. <https://doi.org/10.1080/00218464.2020.1761797>."
@@ -807,9 +807,9 @@ entries:
   - id: "Hehl 2019"
     full: "Hehl, Sabrina. 2019. “Restaurierung einer historischen Spielschachtel aus dem Deutschen Spielearchiv Nürnberg.” Bachelor’s thesis, Technische Hochschule Köln."
   - id: "Heiber 1987"
-    full: "Heiber, Winfried. 1987. “Die doublierung mit geweberasterhaftung.” *ZKK Zeitschrift kunsttechnologie und konservierung* 1, no. 2: 72–76."
+    full: "Heiber, Winfried. 1987. “Die Doublierung mit Geweberasterhaftung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierung* 1, no. 2: 72–76."
   - id: "Heiber 1996"
-    full: "Heiber, Winfried. 1996. “Die Rißverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierung (ZKK)* 10, no. 1: 117–46."
+    full: "Heiber, Winfried. 1996. “Die Rißverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierung* 10, no. 1: 117–46."
   - id: "Heiber 1999"
     full: "Heiber, Winfried. 1999. “Mehr oder weniger 53 m² – Die Konservierung und Restaurierung einer Leinwandtapete in Kalkar.” *ZKK Zeitschrift für Kunsttechnologie und Konservierung*, no. 2: 357–66."
   - id: "Heiber 2003"
