Make misc text and layout fixes

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1395,9 +1395,10 @@ entries:
     full: "Rinaldi, S. 2004. “Il Punteggiato Di Pietro Palmaroli: Genesi Tecnica E Teoria Cromatica.” *Studi di Storia dell'arte* 15:55."
   - id: "R. Roche 1976"
     full: "Roche, R. 1976. “New Materials for Lining.” In *Lining of Paintings—A Reassessment: Proceedings of a Seminar Held at the National Gallery of Canada, Ottawa, April 6–8, 1976*, edited by Mervyn Ruggles, 1–5. Ottawa: National Gallery of Canada."
+    sort_as: "Roche R"
   - id: "A. Roche 2003"
     full: "Roche, A. 2003. *Comportement mécanique des peintures sur toile. Dégradation et prevention*. Paris: CNRS Editions."
-    sort_as: "Roche"
+    sort_as: "Roche A"
   - id: "Rodrigues and Grossi 2007"
     full: "Rodrigues, J. Delgado, and Antonella Grossi. 2007. “Indicators and Ratings for the Compatibility Assessment of Conservation Actions.” *Journal of Cultural Heritage* 8, no. 1: 32–43."
   - id: "Romanov 2013"
